text wraps correctly, sizing good, no margins

--- a/styles/float-page.css
+++ b/styles/float-page.css
@@ -10,3 +10,13 @@ main {
   margin-left: auto;
   margin-right: auto;
 }
+
+.nebula1 {
+	float: left;
+	width: 300px;
+}
+
+.nebula2 {
+	float: right;
+	width: 300px;
+}
